Added buttons for users

--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     <h1 class="heading">Etch A Sketch</h1>
   </header>
   <div class="main-container">
-    <div class="grid-container">
+    <div class="settings">
+      <button id="colorBtn"> Color mode</button>
+      <button id="rainbowBtn"> Rainbow mode</button>
+      <input id="color-input" type="color" value="#FFFFFF">
+      <button id="eraserBtn"> Eraser mode</button>
+      <button id="resetBtn"> Reset mode</button>
+    </div>
+    <div id="gridContainer" class="grid-container">
   </div>
 
   </div>
