--- a/index.html
+++ b/index.html
@@ -13,11 +13,16 @@
   </header>
   <div class="main-container">
     <div class="settings">
-      <button id="colorBtn"> Color mode</button>
-      <button id="rainbowBtn"> Rainbow mode</button>
-      <input id="color-input" type="color" value="#FFFFFF">
-      <button id="eraserBtn"> Eraser mode</button>
-      <button id="resetBtn"> Reset mode</button>
+      <button id="colorBtn" class="btn"> Color</button>
+      <button id="rainbowBtn" class="btn"> Rainbow</button>
+      <input type="color" id="color">
+      <button id="eraserBtn" class="btn"> Eraser</button>
+      <button id="clearBtn" class="btn">Clear</button>
+    </div>
+    <div class="settings2">
+      <button id="blackBtn" class="btn">Black</button>
+      <div id="sizeValue" class="size-value">16 x 16</div>
+      <input id="sizeSlider" type="range" value="16" min="1" max="64" />
     </div>
     <div id="gridContainer" class="grid-container">
   </div>
