Finished with scaling grid boxes and button functions

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="settings">
       <button id="blackBtn" class="btn">Black</button>
       <button id="rainbowBtn" class="btn"> Rainbow</button>
-      <input type="color" id="color">
+      <input type="color" id="color" value="#FFFFFF">
       <button id="eraserBtn" class="btn"> Eraser</button>
       <button id="clearBtn" class="btn">Clear</button>
     </div>
